- fixed a bug in jonglisto OSD - implemented a new OSD Menu item for epg2vdr database (highly configurable)

--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,7 @@
 - implemented svdrposd/remoteosd protocol (jonglisto has now an own OSD)
 - implemented Nashorn (javascript) integration
 - implemented proxying remote timers request to another VDR instance. Uses both Nashorn and the new SVDRP server.
+- implemented a new OSD menu entry (epg2vdr) which can be highly configured by a Nashorn script. See samples/epg2vdr.
 
 0.0.2:
 - implemented search timers, epg2vdr based
