--- a/HISTORY
+++ b/HISTORY
@@ -1,10 +1,12 @@
-0.0.3-snaphot:
+0.0.3:
 - implemented svdrp server
 - implemented svdrposd/remoteosd protocol (jonglisto has now an own OSD)
 - implemented Nashorn (javascript) integration
 - implemented proxying remote timers request to another VDR instance. Uses both Nashorn and the new SVDRP server.
 - implemented a new OSD menu entry (epg2vdr) which can be highly configured by a Nashorn script. See samples/epg2vdr.
 - implemented a SVDRP console to all configured VDR instances
+- implemented a graphical editor for channelmap.conf (epg2vdr daemon). 
+- implemented a auto-mapping tool for channelmap.conf
 
 0.0.2:
 - implemented search timers, epg2vdr based
