--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,7 @@
 0.0.5-snapshot (cleanuo):
-- test
+- implemented wake-on-lan 
+- shows plugin and devices for each VDR on index page
+- possibility to update ordering of epg2vdr channelmap according to channel sorting
 
 0.0.4:
 - channel sorting implemented
