--- a/HISTORY
+++ b/HISTORY
@@ -2,7 +2,8 @@
 - implemented wake-on-lan 
 - shows plugin and devices for each VDR on index page
 - possibility to update ordering of epg2vdr channelmap according to channel sorting
-- localization (a first show in english)
+- localization (a first translation in english)
+- mark different search timer in epg views (epgsearch, epgd and epg2timer)
 
 0.0.4:
 - channel sorting implemented
