start setup page

--- a/src/main/webapp/WEB-INF/app_de.properties
+++ b/src/main/webapp/WEB-INF/app_de.properties
@@ -230,3 +230,26 @@ time_from_to-label=Zeit
 timer_back=Zurück
 svdrp_input=
 select_language=de=deutsch,en=english
+configuration=Jonglisto Konfiguration
+page_setup=Setup
+
+database_configuration=Datenbank Konfiguration
+epgdhost=Host
+epgdport=Port
+epgduser=Benutzer
+epgdpw=Passwort
+testDatabase=Datenbankverbindung testen
+vdr_alias=VDR Alias
+vdr_ip=IP/Hostname
+vdr_uuid=UUID
+vdr_svdrpport=SVDRP Port
+vdr_restfulapi=Restfulapi Port
+newvdr=Neuer VDR
+configviews=Konfiguration der Sichten
+view_name=Name
+view_tv=TV-VDR
+view_channels=Kanalliste-VDR
+view_timers=Timer-VDR
+view_recordings=Aufnahme-VDR
+newview=Neue Sicht
+configvdr=Konfiguration der VDR
