start a setup page... not yet finished

--- a/src/main/webapp/WEB-INF/app_de.properties
+++ b/src/main/webapp/WEB-INF/app_de.properties
@@ -238,6 +238,7 @@ epgdhost=Host
 epgdport=Port
 epgduser=Benutzer
 epgdpw=Passwort
+epgddatabase=Datenbank
 testDatabase=Datenbankverbindung testen
 vdr_alias=VDR Alias
 vdr_ip=IP/Hostname
@@ -253,3 +254,4 @@ view_timers=Timer-VDR
 view_recordings=Aufnahme-VDR
 newview=Neue Sicht
 configvdr=Konfiguration der VDR
+generateConfig=Generiere Jonglisto Konfiguration
