--- a/src/main/webapp/WEB-INF/app_de.properties
+++ b/src/main/webapp/WEB-INF/app_de.properties
@@ -1,257 +1,259 @@
-timer_endtime-regexp=\\d{2}:\\d{2}
-timer_starttime-regexp=\\d{2}:\\d{2}
-timer_type_unknown=<Unbekannt>
-timer_namingmode_select=0=VDR,1=Auto,2=Constable,3=Serie,4=Kategorisiert,5=Benutzerdefiniert
-timer_searchmode_select=1=Exakt,2=regulärer Ausdruck,3=Muster,4=enthalten in
-cancel=Abbrechen
 action-label=Aktionen
+activate=aktivieren
 active=aktiv
 active-label=aktiv
-isActive-label=aktiv
-timer_active=aktiv
-activate=aktivieren
-save_channels_conf=Aktuelle Konfiguration speichern
-old_group_name=Aktueller Name der Kanalgruppe
-ALL=Alle
-blank_label=Alle...
-common_configuration=Allgemeine Konfiguration
-select_alpha=alphabetisch
-other=Andere
-search_count=Anzahl der Suchergebnisse
-audio=Audio
-delete_recording=Aufnahme löschen
-rename_recording=Aufnahme umbenennen
-vdrName-label=Aufnahme VDR
-move_recording=Aufnahme verschieben
-page_recordings=Aufnahmen
-timer_type_record=aufnehmen
-output=Ausgabe
-selected_recordings=Ausgewählte Aufnahmen
-update_selected_channels=Ausgewählte Kanäle speichern
-selected_timer=Ausgewählte Timer
-select_genre=Auswahl Genre
-channel_select=Auswahl Kanäle
-select_category=Auswahl Kategorie
-svdrp_vdr=Auswahl VDR:
-auto_mapping=Auto Mapping
-banner=Banner
-timer_repeat_desc=Beschreibung
-timer_search_longtext=Beschreibung
-timer_search_longtext2=Beschreibung
-tipp=Bewertung
-timer_time_to=bis
-page_channelmap=Channelmap
-select_channelmap=Channelmap
 actor=Darsteller
-filename-label=Datei
-date-label=Datum
-recStartDate-label=Datum
-startDate-label=Datum
-timer_date=Datum
-duration=Dauer
-duration-label=Dauer
-deactivate=deaktivieren
-timer_tuesday=Di
-timer_date_di=Di.
-timer_thursday=Do
-timer_date_do=Do.
-download_mapping=Download Mapping
-developer_pages=Entwickler-Seiten
-show_epgdataids=EPGDATA Ids einblenden
-hide_epgdataids=EPGDATA Ids verstecken
-epgdata_pin=EPGDATA Pin
-timer_episode=Episode
-episode_pics=Episodenbilder
-timer_namingmode=Ermittlung des Dateinamens
-extended_search_criteria=Erweiterte Suchkriterien
-fan_art=Fan Art
-flags=Flags
-episode=Folge
-part=Folge
-part-label=Folge
-timer_seasonpart=Folge
-chformat-label=Format
-timer_endtime-regexp-message=Format der Uhrzeit ist hh:mm
-timer_starttime-regexp-message=Format der Uhrzeit ist hh:mm
-timer_friday=Fr
-timer_date_fr=Fr.
-filterencrypted=Freie oder verschlüsselte Sender
-parental_rating=FSK
-guests=Gäste
-create_channels_conf=Generiere channels.conf
-genre=Genre
-genre-label=Genre
-timer_genre=Genre
-load_channels_conf=Gespeicherte Konfiguration laden
-timer_case=Groß-/Kleinschr.
-fileSize-label=Größe(MB)
-mainprov=Hauptprovider
-imdb_rating=IMDb Rating
-imdb_rating_episode=IMDb Rating Folge
-imdb_rating_series=IMDb Rating Serie
-inactive=inaktiv
-yes=ja
-timer_year=Jahr
+ALL=Alle
+and=und
+audio=Audio
+auto_mapping=Auto Mapping
+avoid_repeat=Wiederholungen vermeiden
+banner=Banner
+blank_label=Alle...
 camera=Kamera
-channel_name=Kanal
-channelid-label=Kanal
-channelName-label=Kanal
-timer_channel=Kanal
-channel_config_sort=Kanal-Konfiguration/-Sortierung
-channel_selection=Kanalauswahl
-select_channel=Kanalauswahl
-channels=Kanäle
-channels-label=Kanäle
-epgid_select=Kanäle der EPG Provider
-channel_group=Kanalgruppe
-new_group_title=Kanalgruppe erstellen
-rename_group_title=Kanalgruppe umbenennen
-channel_groups=Kanalgruppen
-page_channelconfig=Kanalkonfiguration
-channel_mapping=Kanalmapping
+cancel=Abbrechen
 category=Kategorie
 category-label=Kategorie
-timer_category=Kategorie
-provider_config=Konfiguration der EPG Provider
-save_provider_config=Konfiguration speichern
-configured_views=Konfigurierte Sichten
+channel_config_sort=Kanal-Konfiguration/-Sortierung
+channel_group=Kanalgruppe
+channel_groups=Kanalgruppen
+channelid-label=Kanal
+channel_mapping=Kanalmapping
+channel_name=Kanal
+channelName-label=Kanal
+channel_select=Auswahl Kanäle
+channel_selection=Kanalauswahl
+channels=Kanäle
+channels-label=Kanäle
+checkVdr=Prüfe Alias/VDR Konfiguration
+chformat-label=Format
+common_configuration=Allgemeine Konfiguration
+configuration=Jonglisto Konfiguration
 configured_vdr=Konfigurierte VDR
-shortreview=Kurzreview
-timer_repeat_shorttext=Kurztext
-timer_search_shorttext=Kurztext
-timer_search_shorttext2=Kurztext
-timer_lifetime=Lebenszeit
-logout=Logout
-delete_name_mapping=Lösche Name Mapping
-delete=löschen
-save_mapping=Mapping speichern
-reset_mapping=Mapping wiederherstellen
-timer_wednesday=Mi
-timer_date_mi=Mi.
-timer_monday=Mo
-timer_date_mo=Mo.
-moderator=Moderator
-name-label=Name
-timer_name=Name
-new_group_name=Name der neuen Kanalgruppe
-no=nein
-network=Network
+configured_views=Konfigurierte Sichten
+configvdr=Konfiguration der VDR
+configviews=Konfiguration der Sichten
 create_channel_group=Neue Kanalgruppe
+create_channels_conf=Generiere channels.conf
 create_searchtimer=Neuen Suchtimer erstellen
-FREE=Nur freie Sender
-RADIO=Nur Radio
-TV=Nur TV
-ENCRYPTED=Nur verschlüsselte Sender
-parking_group=Parkplatz/Mülleimer
-poster=Poster
-timer_priority=Priorität
-page_program_now=Programm (jetzt)
-page_program_channel=Programm (Kanal)
-page_program_day=Programm (Tag)
-read_provider_ids=Provider Ids neu einlesen
-source=Quelle
-timer_type_select=R=aufnehmen,V=umschalten,S=suchen
-RADIOTV=Radio und TV
-rating=Rating
+create_timer=Timer anlegen
+database_configuration=Datenbank Konfiguration
+date-label=Datum
+days=Tage
+deactivate=deaktivieren
+delete=löschen
+delete_name_mapping=Lösche Name Mapping
+delete_recording=Aufnahme löschen
+delete_searchtimer=Suchtimer löschen
+delete_timer=Timer löschen
+developer_pages=Entwickler-Seiten
 director=Regie
-timer_saturday=Sa
-timer_date_sa=Sa.
-secprov=Sekundärer Provider
-timer_starttime=Sendungsbeginn zwischen
-series_poster=Serien Poster
-series_overview=Serienübersicht
-timer_sunday=So
-timer_date_so=So.
-sort=Sortieren
-update_database=Sortierung in der Datenbank ändern
-save=Speichern
-timer_save=Speichern
-season=Staffel
-season-label=Staffel
-timer_season=Staffel
-recStartTime-label=Start
-startTime-label=Start
-page_index=Startseite
-status=Status
-keyword=Stichwort
-stopTime-label=Stop
-timer_searchitem=Suchausdruck
-expression-label=Suchausdruck 1
-expression1-label=Suchausdruck 2
-timer_searchitem2=Suchausdruck 2
-search=Suchen
-timer_type_search=suchen
-search_results=Suchergebnisse
-search_criteria=Suchkriterien
-timer_searchmode=Suchmodus
-page_search_timer=Suchtimer
-execute_searchtimer=Suchtimer ausführen
+directory-label=Verzeichnis
+download_mapping=Download Mapping
+duration=Dauer
+duration-label=Dauer
 edit_searchtimer=Suchtimer bearbeiten
 edit_timer=Suchtimer editieren
-delete_searchtimer=Suchtimer löschen
-page_svdrp_console=SVDRP Konsole
-days=Tage
-page_timer=Timer
-create_timer=Timer anlegen
 edit_timer=Timer bearbeiten
-delete_timer=Timer löschen
-timer_repeat_title=Titel
-timer_search_title=Titel
-timer_search_title2=Titel
-title=Titel
-title-label=Titel
-hits-label=Treffer
-switch_channel=TV umschalten
-filterradio=TV und/oder Radio
-show_tvmids=TVM Ids einblenden
-hide_tvmids=TVM Ids verstecken
-show_tvspids=TVSP Ids einblenden
-hide_tvspids=TVSP Ids verstecken
-type-label=Typ
-time=Uhrzeit
-time-label=Uhrzeit
-timer_start=Uhrzeit
-rename=Umbenennen
-timer_type_switch=umschalten
-and=und
-select_vdr=VDR
-timer_vdr=VDR
-move=Verschieben
-move_to=verschieben nach
-directory-label=Verzeichnis
-timer_directory=Verzeichnis
-timer_time_from=von
-timer_vps=VPS
-timer_type=Was tun...
-avoid_repeat=Wiederholungen vermeiden
-greeting=Willkommen bei VDR Jonglisto.
-timer_weekdays=Wochentage
-time_from_to-label=Zeit
-timer_back=Zurück
-svdrp_input=
-select_language=de=deutsch,en=english
-configuration=Jonglisto Konfiguration
-page_setup=Setup
-
-database_configuration=Datenbank Konfiguration
+ENCRYPTED=Nur verschlüsselte Sender
+epgdata_pin=EPGDATA Pin
+epgddatabase=Datenbank
 epgdhost=Host
 epgdport=Port
-epgduser=Benutzer
 epgdpw=Passwort
-epgddatabase=Datenbank
-testDatabase=Datenbankverbindung testen
-vdr_alias=VDR Alias
-vdr_ip=IP/Hostname
-vdr_uuid=UUID
-vdr_svdrpport=SVDRP Port
-vdr_restfulapi=Restfulapi Port
-newvdr=Neuer VDR
-configviews=Konfiguration der Sichten
-view_name=Name
-view_tv=TV-VDR
-view_channels=Kanalliste-VDR
-view_timers=Timer-VDR
-view_recordings=Aufnahme-VDR
-newview=Neue Sicht
-configvdr=Konfiguration der VDR
+epgduser=Benutzer
+epgid_select=Kanäle der EPG Provider
+episode=Folge
+episode_pics=Episodenbilder
+execute_searchtimer=Suchtimer ausführen
+expression1-label=Suchausdruck 2
+expression-label=Suchausdruck 1
+extended_search_criteria=Erweiterte Suchkriterien
+fan_art=Fan Art
+filename-label=Datei
+fileSize-label=Größe(MB)
+filterencrypted=Freie oder verschlüsselte Sender
+filterradio=TV und/oder Radio
+flags=Flags
+FREE=Nur freie Sender
 generateConfig=Generiere Jonglisto Konfiguration
+genre=Genre
+genre-label=Genre
+greeting=Willkommen bei VDR Jonglisto.
+guests=Gäste
+hide_epgdataids=EPGDATA Ids verstecken
+hide_tvmids=TVM Ids verstecken
+hide_tvspids=TVSP Ids verstecken
+hits-label=Treffer
+imdb_rating_episode=IMDb Rating Folge
+imdb_rating=IMDb Rating
+imdb_rating_series=IMDb Rating Serie
+inactive=inaktiv
+isActive-label=aktiv
+keyword=Stichwort
+load_channels_conf=Gespeicherte Konfiguration laden
+logout=Logout
+mainprov=Hauptprovider
+moderator=Moderator
+move_recording=Aufnahme verschieben
+move_to=verschieben nach
+move=Verschieben
+name-label=Name
+network=Network
+new_group_name=Name der neuen Kanalgruppe
+new_group_title=Kanalgruppe erstellen
+newvdr=Neuer VDR
+newview=Neue Sicht
+no=nein
+old_group_name=Aktueller Name der Kanalgruppe
+other=Andere
+output=Ausgabe
+page_channelconfig=Kanalkonfiguration
+page_channelmap=Channelmap
+page_index=Startseite
+page_program_channel=Programm (Kanal)
+page_program_day=Programm (Tag)
+page_program_now=Programm (jetzt)
+page_recordings=Aufnahmen
+page_search_timer=Suchtimer
+page_setup=Setup
+page_svdrp_console=SVDRP Konsole
+page_timer=Timer
+parental_rating=FSK
+parking_group=Parkplatz/Mülleimer
+part=Folge
+part-label=Folge
+poster=Poster
+provider_config=Konfiguration der EPG Provider
+RADIO=Nur Radio
+RADIOTV=Radio und TV
+rating=Rating
+read_provider_ids=Provider Ids neu einlesen
+recStartDate-label=Datum
+recStartTime-label=Start
+rename_group_title=Kanalgruppe umbenennen
+rename_recording=Aufnahme umbenennen
+rename=Umbenennen
+reset_mapping=Mapping wiederherstellen
+save_channels_conf=Aktuelle Konfiguration speichern
+save_mapping=Mapping speichern
+save_provider_config=Konfiguration speichern
+save=Speichern
+search_count=Anzahl der Suchergebnisse
+search_criteria=Suchkriterien
+search_results=Suchergebnisse
+search=Suchen
+season-label=Staffel
+season=Staffel
+secprov=Sekundärer Provider
+select_alpha=alphabetisch
+select_category=Auswahl Kategorie
+select_channel=Kanalauswahl
+select_channelmap=Channelmap
+selected_recordings=Ausgewählte Aufnahmen
+selected_timer=Ausgewählte Timer
+select_genre=Auswahl Genre
+select_language=de=deutsch,en=english
+select_vdr=VDR
+series_overview=Serienübersicht
+series_poster=Serien Poster
+shortreview=Kurzreview
+show_epgdataids=EPGDATA Ids einblenden
+show_tvmids=TVM Ids einblenden
+show_tvspids=TVSP Ids einblenden
+sort=Sortieren
+source=Quelle
+startDate-label=Datum
+startTime-label=Start
+status=Status
+stopTime-label=Stop
+svdrp_input=
+svdrp_vdr=Auswahl VDR:
+switch_channel=TV umschalten
+testDatabase=Datenbankverbindung testen
+time_from_to-label=Zeit
+time-label=Uhrzeit
+timer_active=aktiv
+timer_back=Zurück
+timer_case=Groß-/Kleinschr.
+timer_category=Kategorie
+timer_channel=Kanal
+timer_date=Datum
+timer_date_di=Di.
+timer_date_do=Do.
+timer_date_fr=Fr.
+timer_date_mi=Mi.
+timer_date_mo=Mo.
+timer_date_sa=Sa.
+timer_date_so=So.
+timer_directory=Verzeichnis
+timer_endtime-regexp=\\d{2}:\\d{2}
+timer_endtime-regexp-message=Format der Uhrzeit ist hh:mm
+timer_episode=Episode
+timer_friday=Fr
+timer_genre=Genre
+timer_lifetime=Lebenszeit
+timer_monday=Mo
+timer_name=Name
+timer_namingmode=Ermittlung des Dateinamens
+timer_namingmode_select=0=VDR,1=Auto,2=Constable,3=Serie,4=Kategorisiert,5=Benutzerdefiniert
+timer_priority=Priorität
+timer_repeat_desc=Beschreibung
+timer_repeat_shorttext=Kurztext
+timer_repeat_title=Titel
+timer_saturday=Sa
+timer_save=Speichern
+timer_searchitem2=Suchausdruck 2
+timer_searchitem=Suchausdruck
+timer_search_longtext2=Beschreibung
+timer_search_longtext=Beschreibung
+timer_searchmode_select=1=Exakt,2=regulärer Ausdruck,3=Muster,4=enthalten in
+timer_searchmode=Suchmodus
+timer_search_shorttext2=Kurztext
+timer_search_shorttext=Kurztext
+timer_search_title2=Titel
+timer_search_title=Titel
+timer_seasonpart=Folge
+timer_season=Staffel
+timer_starttime-regexp=\\d{2}:\\d{2}
+timer_starttime-regexp-message=Format der Uhrzeit ist hh:mm
+timer_starttime=Sendungsbeginn zwischen
+timer_start=Uhrzeit
+timer_sunday=So
+timer_thursday=Do
+timer_time_from=von
+timer_time_to=bis
+timer_tuesday=Di
+timer_type_record=aufnehmen
+timer_type_search=suchen
+timer_type_select=R=aufnehmen,V=umschalten,S=suchen
+timer_type_switch=umschalten
+timer_type_unknown=<Unbekannt>
+timer_type=Was tun...
+timer_vdr=VDR
+timer_vps=VPS
+timer_wednesday=Mi
+timer_weekdays=Wochentage
+timer_year=Jahr
+time=Uhrzeit
+tipp=Bewertung
+title-label=Titel
+title=Titel
+TV=Nur TV
+type-label=Typ
+update_database=Sortierung in der Datenbank ändern
+update_selected_channels=Ausgewählte Kanäle speichern
+vdr_alias=Alias
+vdr_displayname=Anzeigename
+vdr_hostname=Rechnername
+vdr_ip=IP
+vdrName-label=Aufnahme VDR
+vdr_restfulapi=Restfulapi Port
+vdr_svdrpport=SVDRP Port
+vdr_uuid=UUID
+view_channels=Kanalliste-VDR
+view_name=Name
+view_recordings=Aufnahmen-VDR
+view_timers=Timer-VDR
+view_tv=TV-VDR
+yes=ja
