- jonglisto can now operate without EPGD - various bugfixes and enhancements

--- a/src/main/webapp/WEB-INF/app_de.properties
+++ b/src/main/webapp/WEB-INF/app_de.properties
@@ -191,6 +191,7 @@ timer_endtime-regexp=\\d{2}:\\d{2}
 timer_endtime-regexp-message=Format der Uhrzeit ist hh:mm
 timer_episode=Episode
 timer_friday=Fr
+timer_filename=Dateiname
 timer_genre=Genre
 timer_lifetime=Lebenszeit
 timer_monday=Mo
@@ -243,6 +244,7 @@ TV=Nur TV
 type-label=Typ
 update_database=Sortierung in der Datenbank ändern
 update_selected_channels=Ausgewählte Kanäle speichern
+useepgd=Verwende die EPGD Datenbank
 vdr_alias=Alias
 vdr_displayname=Anzeigename
 vdr_hostname=Rechnername
