--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,5 @@
 0.0.6-snaphot:
-
+- able to use jonglisto without an running epgd daemon (restfulapi-only-mode)
 
 0.0.5:
 - implemented wake-on-lan 
