--- a/src/main/webapp/WEB-INF/app_de.properties
+++ b/src/main/webapp/WEB-INF/app_de.properties
@@ -259,3 +259,8 @@ view_recordings=Aufnahmen-VDR
 view_timers=Timer-VDR
 view_tv=TV-VDR
 yes=ja
+username=Benutzer
+password=Passwort
+login=Login
+login-required=Login erforderlich
+logout=Abmelden
