save intermediate result - unfinished

--- a/src/main/webapp/WEB-INF/app_de.properties
+++ b/src/main/webapp/WEB-INF/app_de.properties
@@ -119,6 +119,7 @@ page_search_timer=Suchtimer
 page_setup=Setup
 page_svdrp_console=SVDRP Konsole
 page_timer=Timer
+page_useradmin=Benutzer Verwaltung
 parental_rating=FSK
 parking_group=Parkplatz/Mülleimer
 part=Folge
@@ -264,3 +265,18 @@ password=Passwort
 login=Login
 login-required=Login erforderlich
 logout=Abmelden
+perm_page_developer=Developer
+perm_page_channelconfig=Kanalkonfiguration
+perm_page_programtime=Programm (jetzt)
+perm_page_searchtimer=Suchtimer
+perm_page_setup=Setup
+perm_page_programchannel=Programm (Kanal)
+perm_page_programday=Programm (Tag)
+perm_page_useradmin=Benutzer Verwaltung
+perm_page_channelmap=Channelmap
+perm_page_timer=Timer
+perm_page_svdrpconsole=SVDRP Konsole
+perm_page_index=Startseite
+perm_page_recordings=Aufnahmen
+perm_view_vdr=Sicht/VDR
+perm_channel_group=Kanalgruppe
